--- a/package.json
+++ b/package.json
@@ -6,9 +6,20 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@tippy.js/react": "^3.1.1",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.0.4",
+    "react-color": "^2.19.3",
+    "react-countup": "^4.4.0",
+    "react-credit-cards": "^0.8.3",
+    "react-datepicker": "^4.1.1",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
+    "react-idle-timer": "^4.6.4",
+    "react-modal": "^3.14.3",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.11.0",
+    "react-toastify": "^7.0.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
